update default values

--- a/.github/workflows/reusable-backend-cd.yml
+++ b/.github/workflows/reusable-backend-cd.yml
@@ -19,7 +19,7 @@ on:
         required: false
         description: 'json file of key pairs env vars'
         type: string
-        default: '{"ENV":"production","REGION":"us-east-1","DEBUG":"false"}'
+        default: ''
     outputs:
       image-tag:
         description: "Generated image tag"
