--- a/.github/workflows/ci_cd_admin_backend.yml
+++ b/.github/workflows/ci_cd_admin_backend.yml
@@ -52,7 +52,8 @@ jobs:
             "REGION": "us-east-1",
             "DEBUG": "false",
             "TF_VAR_SUPABASE_URL": "${{ vars.SUPABASE_URL }}",
-            "TF_VAR_ADMIN_BACKEND_IMAGE_TAG": "${{ needs.cd-admin-backend.outputs.image-tag }}"
+            "TF_VAR_ADMIN_BACKEND_IMAGE_TAG": "${{ needs.cd-admin-backend.outputs.image-tag }}",
+            "TF_VAR_FRONTEND_URL": "${{ vars.FRONTEND_URL }}"
           }
           EOF
 
