--- a/.github/workflows/ci_cd_backend.yml
+++ b/.github/workflows/ci_cd_backend.yml
@@ -60,7 +60,8 @@ jobs:
             "DEBUG": "false",
             "TF_VAR_SUPABASE_URL": "${{ vars.SUPABASE_URL }}",
             "TF_VAR_ADMIN_BACKEND_IMAGE_TAG": "${{ needs.cd-admin-backend.outputs.image-tag }}",
-            "TF_VAR_FRONTEND_URL": "${{ vars.FRONTEND_URL }}",
+            "TF_VAR_ADMIN_FRONTEND_URL": "${{ vars.ADMIN_FRONTEND_URL }}",
+            "TF_VAR_PUBLIC_FRONTEND_URL": "${{ vars.PUBLIC_FRONTEND_URL }}",
             "TF_VAR_PUBLIC_BACKEND_IMAGE_TAG": "${{ needs.cd-public-backend.outputs.image-tag }}"
           }
           EOF
