fix env var for qr

--- a/frontends/admin/env.example
+++ b/frontends/admin/env.example
@@ -7,3 +7,4 @@ VITE_API_URL=http://localhost:3000
 # Configuración de Supabase (si es necesario)
 VITE_SUPABASE_URL=your_supabase_url
 VITE_SUPABASE_ANON=your_supabase_anon_key
+VITE_PUBLIC_FRONTEND_URL=http://localhost:5174
