--- a/backend/env.example
+++ b/backend/env.example
@@ -3,3 +3,11 @@ NODE_ENV=
 FRONTEND_URL=
 SUPABASE_URL=
 SUPABASE_SERVICE_KEY=
+
+# AWS S3 Configuration
+# Estas variables tienen valores por defecto para producción
+# Si no se configuran, se usarán los valores por defecto
+AWS_REGION=us-east-1
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+S3_BUCKET_NAME=production-menapp-images
