--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
   "author": "MenuApp Team",
   "license": "MIT",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.872.0",
     "@codegenie/serverless-express": "^4.17.0",
     "@prisma/client": "^5.6.0",
     "@supabase/supabase-js": "^2.53.0",
