--- a/.github/workflows/ci_cd_admin_frontend.yml
+++ b/.github/workflows/ci_cd_admin_frontend.yml
@@ -32,6 +32,7 @@ jobs:
             "REGION": "us-east-1",
             "DEBUG": "false",
             "VITE_API_URL": "${{ vars.ADMIN_API_URL }}",
+            "VITE_MEDIA_URL": "${{ vars.MEDIA_URL }}",
             "VITE_SUPABASE_URL": "${{ vars.SUPABASE_URL }}",
             "VITE_PUBLIC_FRONTEND_URL": "${{ vars.PUBLIC_FRONTEND_URL }}",
             "VITE_SUPABASE_ANON": "${{ vars.SUPABASE_ANON }}"
