--- a/frontends/admin/env.example
+++ b/frontends/admin/env.example
@@ -1,10 +1,10 @@
-# Variables de entorno para el frontend de administración
-
-
-# URL del backend API
+# API Configuration
 VITE_API_URL=http://localhost:3000
+VITE_MEDIA_URL=media.menapp.co
 
-# Configuración de Supabase (si es necesario)
+# Supabase Configuration
 VITE_SUPABASE_URL=your_supabase_url
 VITE_SUPABASE_ANON=your_supabase_anon_key
+
+# Public Frontend URL
 VITE_PUBLIC_FRONTEND_URL=http://localhost:5174
