--- a/.github/workflows/ci_cd_restaurants_frontend.yml
+++ b/.github/workflows/ci_cd_restaurants_frontend.yml
@@ -46,6 +46,7 @@ jobs:
     uses: ./.github/workflows/reusable-frontend-cd.yml
     with:
       frontend-path: 'frontends/restaurants'
+      build-path: 'frontends/restaurants/dist'
       node-version: '20'
       cloudfront-distribution-id: 'E3PVFAZHMLAOA3'
       s3-bucket-url: 's3://production-menapp-restaurants-frontend/restaurants'
