--- a/.github/workflows/ci_cd_landing_frontend.yml
+++ b/.github/workflows/ci_cd_landing_frontend.yml
@@ -26,6 +26,7 @@ jobs:
     uses: ./.github/workflows/reusable-frontend-cd.yml
     with:
       frontend-path: 'frontends/landing'
+      build-path: 'frontends/landing/build/client'
       node-version: '20'
       cloudfront-distribution-id: 'E3PVFAZHMLAOA3'
       s3-bucket-url: 's3://production-menapp-landing-frontend'
