--- a/frontends/landing/package.json
+++ b/frontends/landing/package.json
@@ -12,24 +12,16 @@
     "tests": "echo TODO"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.0.1",
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
-    "@vis.gl/react-google-maps": "^1.5.2",
-    "isbot": "^5.1.27",
+    "isbot": "^5",
     "react": "^19.1.0",
-    "react-calendly": "^4.4.0",
     "react-dom": "^19.1.0",
-    "react-hook-form": "^7.56.4",
-    "react-router": "^7.5.3",
-    "swr": "^2.3.3",
-    "yup": "^1.6.1",
-    "zustand": "^5.0.5"
+    "react-router": "^7.5.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.27.0",
     "@react-router/dev": "^7.5.3",
-    "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/vite": "^4.1.4",
     "@types/node": "^20",
     "@types/react": "^19.1.2",
