--- a/frontends/restaurants/package.json
+++ b/frontends/restaurants/package.json
@@ -9,6 +9,7 @@
     "typecheck": "react-router typegen && tsc",
     "lint": "eslint .",
     "lint-fix": "eslint . --fix",
+    "format": "prettier --write .",
     "tests": "echo TODO"
   },
   "dependencies": {
